development/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: rajasekar9698/one-pay-mysql:1.0.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
        - name: sql-scripts
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
      - name: sql-scripts
        hostPath:
          path: "/docker-entrypoint-initdb.d"

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: development
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
  type: ClusterIP
