development/onepay-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onepay-admin-app-deployment
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onepay-admin-app
  template:
    metadata:
      labels:
        app: onepay-admin-app
    spec:
      containers:
      - name: onepay-admin-app
        image: rajasekar9698/onepay-admin-app:1.0.0
        ports:
        - containerPort: 80
        imagePullPolicy: Always 
---
apiVersion: v1
kind: Service
metadata:
  name: onepay-admin-app-service
  namespace: development
spec:
  selector:
    app: onepay-admin-app
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 80
