development/onepay-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onepay-api-deployment
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onepay-api
  template:
    metadata:
      labels:
        app: onepay-api
    spec:
      containers:
      - name: onepay-api
        image: rajasekar9698/one-pay-api:1.0.0
        ports:
        - containerPort: 8080
        workingDir: /usr/src/app
---
apiVersion: v1
kind: Service
metadata:
  name: onepay-api-service
  namespace: development
spec:
  selector:
    app: onepay-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
